--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "normalize-css": "^5.0.0"    
+    "normalize-css": "^5.0.0",
+    "html5shiv": "^3.7.3"
   }
 }
